# CppFun

./: #Circle.cpp#  #obs_avoid.cpp#  .#obs_avoid.cpp  .gitignore  EigenTest.cpp  Object.h  Object.h~  Polygon.cpp  Polygon.cpp~  Polygon.h  Polygon.inl  Polygon.inl~  README.md  eigtest  obstacle_avoidance
MPC/: #MySimulator.h#  #Parameters.h#  #main.cpp#  .#main.cpp  CMakeCache.txt  CMakeLists.txt  IParameters.h~  LtiSystem.cpp  MPC.cpp  MPC.h  Makefile  MySimulator.cpp  MySimulator.cpp~  MySimulator.h  MySimulator.h~  Parameters.h  Parameters.h~  Readme.md  Simulator.h  Simulator.h~  System.h  System.h~  cmake_install.cmake  eigenmvn.h  lti_ulog.tr  lti_xlog.tr  main.cpp  mpc  mpc_ulog.tr  mpc_xlog.tr  plot_traces.py  plot_traces.py~  ulog.tr  xlog.tr
MPC/html/: MPC_8h_source.html  Parameters_8h_source.html  Simulator_8h_source.html  _formulas.tex  annotated.html  classFG__eval-members.html  classFG__eval.html  classMPC-members.html  classMPC.html  classSimulator-members.html  classSimulator.html  classes.html  files.html  functions.html  functions_func.html  md_Readme.html  pages.html  structLtiParameters-members.html  structLtiParameters.html  structMpcParameters-members.html  structMpcParameters.html
MPC/html/search/: all_0.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_7.js  functions_9.js  (+1 more)
MPC/latex/: annotated.tex  classFG__eval.tex  classMPC.tex  classSimulator.tex  md_Readme.tex  refman.tex  structLtiParameters.tex  structMpcParameters.tex
(+78 files in other folders)
